# avion

./: Cargo.toml  README.md  bugs  build.rs  camera.blend  chris.lua  draggers.blend  questions  todo  todo_tree  tofix
armature/: flatstuff.arm  robot_armature.arm
blend/: couloir.blend  flatstuff2.blend  robot.blend  table_low.blend
edc/: entry.edc  entry.edj  entry_min.edc  entry_min.edj  panel.edc  panel.edj  popup.edc  popup.edj  test.edc  test.edj
lua/: chris.lua
material/: camera.mat  color.mat  dragger.mat  fbo.mat  fbo_all.mat  line.mat  line_size_fixed.mat  outline.mat  simple.mat  simple2.mat
model/: Couloir.mesh  camera.mesh  dragger_cube.mesh  flatstuff.mesh  robot.mesh  table_low.mesh
scene/: simple.scene  simple000.scene  simplesav.scene
shader/: color.frag  color.sh  color.vert  dragger.frag  dragger.sh  dragger.vert  line.frag  line.sh  line.vert  outline.frag  outline.sh  simple.frag  simple.sh  simple.vert  simple_normal.frag  simple_normal.sh
src/: armature.rs  camera.rs  context.rs  control.rs  factory.rs  fbo.rs  geometry.rs  intersection.rs  main.rs  material.rs  matrix.rs  mesh.rs  mesh_render.rs  object.rs  operation.rs  property.rs  render.rs  resource.rs  scene.rs  shader.rs  texture.rs  transform.rs  ui.rs  uniform.rs  util.rs  vec.rs
src/component/: armature_animation.rs  manager.rs  mesh_render.rs  mod.rs  player.rs
src/dragger/: dragger.rs  manager.rs  mod.rs  rotate.rs  scale.rs  translate.rs
src/model/: ground.rs  mod.rs  table.rs
src/ui/: action.rs  command.rs  def.rs  dragger.rs  mod.rs  property.rs  property_box.rs  property_list.rs  tree.rs  view.rs
