[package]

name = "avion"
version = "0.1.0"
authors = [ "chris@indefini.org" ]
build = "build.rs"

[[bin]]

name = "avion"

[dependencies.png]
git = "https://github.com/servo/rust-png.git"
#git = "https://github.com/sebcrozet/rust-png.git"
#git = "https://github.com/drasich/rust-png.git"

#[dependencies.cypher]

#git = "https://github.com/drasich/cypher.git"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"

[dependencies.uuid]
git = "https://github.com/rust-lang/uuid.git"

[dependencies]
rustc-serialize = "0.2.12"


